Fix textbox text jumps

--- a/nih-plug/src/editor/style.css
+++ b/nih-plug/src/editor/style.css
@@ -30,10 +30,11 @@ label {
 textbox {
   text-align: center;
   width: 64px;
-  height: 12px;
+  height: 15px;
   color: #ececec;
   background-color: transparent;
   border-width: 0px;
+  overflow: visible;
 }
 
 textbox:hover {
